--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@ Date: September 2, 2025
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
    <main>
-   <p> I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects</p>
+   <p> I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects &#9733;</p>
    </main>
    
    <footer>
@@ -40,4 +40,5 @@ Date: September 2, 2025
    
    
    
+
 </html>
