--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,14 @@ Date: September 2, 2025
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
    <main>
-   <a href="projects/fitness2/index.html">Forward Chapter 2</a>
+	<div>
+   	<a href="projects/fitness2/index.html">Forward Chapter 2</a>
+   </div>
+	   
+   <div>
+   <a href="projects/fitness3/index.html">Forward Chapter 3</a>
+   </div>
+
    </main>
    
    <footer>
@@ -41,4 +48,5 @@ Date: September 2, 2025
    
    
    
+
 </html>
