--- a/projects.html
+++ b/projects.html
@@ -20,11 +20,10 @@ Date: September 2, 2025
    
    <nav>
    <p>
-   Home &nbsp; &#9475; &nbsp;
-	About Me &nbsp;  &#9475; &nbsp;
-	Contact &nbsp; &#9475; &nbsp;
-	<a href="projects.html"> Projects</a> &nbsp; &#9475; &nbsp;
-	
+   <a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
+	<a href="about.html">About Me</a> &nbsp;  &#9475; &nbsp;
+	<a href="contact.html">Contact</a> &nbsp; &#9475; &nbsp;
+	<a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
    </p>
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
@@ -50,3 +49,4 @@ Date: September 2, 2025
    
 
 </html>
+
