--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ Date: September 2, 2025
    
    <nav>
    <p>
-   Home &nbsp; &#9475; &nbsp;
-	About Me &nbsp;  &#9475; &nbsp;
-	Contact &nbsp; &#9475; &nbsp;
-	<a href="projects.html"> Projects</a> &nbsp; &#9475; &nbsp;
+	<a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
+	<a href="about.html">About Me</a> &nbsp;  &#9475; &nbsp;
+	<a href="contact.html">Contact</a> &nbsp; &#9475; &nbsp;
+	<a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
    </p>
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
@@ -31,7 +31,9 @@ Date: September 2, 2025
    <p> I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects &#9733;</p>
    </main>
    
-   <footer>
+   <footer
+	    <p><a href="mailto:mackenzie.horton@stu.cvccworks.edu">
+	Macks Email</a></p>
    </footer>
    
    
@@ -41,3 +43,4 @@ Date: September 2, 2025
    
    
 </html>
+
