--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ Date: September 2, 2025
 	<header>
 	<h1> Mackenzie Horton</h1>
 	<h2>Student Java Programmer</h2>
+	<a href="index.html"><img src="images/mack.png"
+	alt="Personal Picture"height="300"
+		width="300"></a>
+		
     </header>
    
    <nav>
@@ -43,4 +47,5 @@ Date: September 2, 2025
    
    
 </html>
+
 
