--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@ Date: September 2, 2025
 	<header>
 	<h1> Mackenzie Horton</h1>
 	<h2>Student Java Programmer</h2>
-	<a href="index.html"><img src="images/mack.png"
+	<a href="index.html"><img src="images/Mackenzie.dng"
 	alt="Personal Picture"height="300"
 		width="300"></a>
-		
     </header>
    
    <nav>
@@ -35,8 +34,8 @@ Date: September 2, 2025
    <p> I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects &#9733;</p>
    </main>
    
-   <footer
-	    <p><a href="mailto:mackenzie.horton@stu.cvccworks.edu">
+   <footer>
+   <p><a href="mailto:mackenzie.horton@stu.cvccworks.edu">
 	Macks Email</a></p>
    </footer>
    
@@ -47,5 +46,3 @@ Date: September 2, 2025
    
    
 </html>
-
-
