--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@ Date: September 2, 2025
    <head>
 		<title>Mackenzie Horton</title>
 		<meta charset="utf-8">
+		<style>
+			body{
+					background:linear-gradient(to right,#fbc2eb, #a6c1ee);;
+					margin: 0;
+					font-family:Arial, sans-serif
+				}
+		</style>
    </head>
    <body>
 		<p></p>
