--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Date: September 2, 2025
 		<meta charset="utf-8">
 		<style>
 			body{
-					background:linear-gradient(to right,#fbc2eb, #a6c1ee);;
+					background:linear-gradient(to right,#fbc2eb, #a6c1ee);
 					margin: 0;
 					font-family:Arial, sans-serif
 				}
@@ -52,4 +52,5 @@ Date: September 2, 2025
    
    
    
+
 </html>
