--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ Date: September 2, 2025
 	<header>
 	<h1> Mackenzie Horton</h1>
 	<h2>I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects. </h2>
-	<a href="index.html"><img src="images/Mackenzie.dng"
+	<a href="index.html"><img src="images/Mackenzie.jpg"
 	alt="Personal Picture" height="300"
 		width="300"></a>
     </header>
