--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Date: September 2, 2025
 	<header>
 	<h1> Mackenzie Horton</h1>
 	<h2>Student Java Programmer</h2>
-	<a href="index.html"><img src="images/Mackenzie.dng"
+	<a href="index.html"><img src="images/Mackenzie.jpg"
 	alt="Personal Picture"height="300"
 		width="300"></a>
     </header>
@@ -52,5 +52,4 @@ Date: September 2, 2025
    
    
    
-
 </html>
