--- a/about.html
+++ b/about.html
@@ -10,6 +10,11 @@ Date: September 2, 2025
    <head>
 		<title>Mackenzie Horton</title>
 		<meta charset="utf-8">
+		<style>
+    body {
+        background: linear-gradient(to right, #fbc2eb, #a6c1ee);
+    }
+		</style>
    </head>
    <body>
 		<p></p>
