--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,12 @@ Date: September 2, 2025
    <body>
 		<p></p>
 	<header>
-	<h1> Mackenzie Horton</h1>
-	<h2>I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects. </h2>
+	<h1 style="color:#C71585;">
+	Mackenzie Horton
+	</h1>
+	<h2  style="color:white;">
+	I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects.
+	</h2>
 	<a href="index.html"><img src="images/Mackenzie.jpg"
 	alt="Personal Picture" height="300"
 		width="300"></a>
@@ -37,7 +41,8 @@ Date: September 2, 2025
    <!-- Use the main area to add the main content of the webpage-->
    <main>
 		<div id="contact">
-			<h2>Ready to get started? Contact us today.</h2>
+			<h2 style="color:#C71585;">
+			Ready to get started? Contact us today.</h2>
 			<h4>Email me: <a href="mailto:mackenzie.horton@stu.cvccworks.edu">
 			Macks Email</a></h4>
 			<h4>Visit me at: 8001 Brecksville Rd, Brecksville, OH 44141</h4>
