--- a/about.html
+++ b/about.html
@@ -19,8 +19,11 @@ Date: September 2, 2025
    <body>
 		<p></p>
 	<header>
-	<h1> Mackenzie Horton</h1>
-	<h2>I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects. </h2>
+	<h1 style="color:#C71585;">
+	Mackenzie Horton</h1>
+	<h2 style="color:white;">
+	I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects. 
+	</h2>
 	<a href="index.html"><img src="images/Mackenzie.jpg"
 	alt="Personal Picture" height="300"
 		width="300"></a>
@@ -37,15 +40,19 @@ Date: September 2, 2025
    <!-- Use the main area to add the main content of the webpage-->
    <main>
 		<div id="about">
-			<h1>About Me</h1>
-			<p>Outside of programming, I enjoy relaxing by playing The Sims 4, keeping up with football and many more hobbies. These hobbies give me a balance between creativity, strategy, and fun. .</p>
+			<h1 style="color:#C71585;">
+			About Me
+			</h1>
+			<p style="color:#fff;font-size: 24px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+			Outside of programming, I enjoy relaxing by playing The Sims 4, keeping up with football and many more hobbies. These hobbies give me a balance between creativity, strategy, and fun. .
+			</p>
 			
 			<ul>
-				<li>Sims 4</li>
-				<li>Football</li>
-				<li>Flag Football</li>
-				<li>Running Track</li>
-				<li>Watching Tv Shows</li>
+				<li style="color: #C71585; font-size: 20px;">Sims 4</li>
+  <li style="color: #C71585; font-size: 20px;">Football</li>
+  <li style="color: #C71585; font-size: 20px;">Flag Football</li>
+  <li style="color: #C71585; font-size: 20px;">Running Track</li>
+  <li style="color: #C71585; font-size: 20px;">Watching TV Shows</li>
 				
 				
 			</ul>
