--- a/projects.html
+++ b/projects.html
@@ -19,8 +19,10 @@ Date: September 2, 2025
    <body>
 		<p></p>
 	<header>
-	<h1> Mackenzie Horton</h1>
-	<h2>Here are some of my projects. </h2>
+	<h1 style="color:white;">
+	Mackenzie Horton</h1>
+	<h2 style="color:#C71585;">
+	Here are some of my projects. </h2>
     </header>
    
    <nav>
