--- a/index.html
+++ b/index.html
@@ -10,43 +10,38 @@ Date: September 2, 2025
    <head>
 		<title>Mackenzie Horton</title>
 		<meta charset="utf-8">
-		<style>
-			body{
-					background:linear-gradient(to right,#fbc2eb, #a6c1ee);
-					margin: 0;
-					font-family:Arial, sans-serif
-				}
-		</style>
+		<link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
 		<p></p>
+		
 	<header>
 	<h1> Mackenzie Horton</h1>
 	<h2>Student Java Programmer</h2>
 	<a href="index.html"><img src="images/Mackenzie.jpg"
-	alt="Personal Picture"height="300"
-		width="300"></a>
+	alt="Personal Picture"></a>
     </header>
    
    <nav>
-   <p>
-	<a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
-	<a href="about.html">About Me</a> &nbsp;  &#9475; &nbsp;
-	<a href="contact.html">Contact</a> &nbsp; &#9475; &nbsp;
-	<a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
-   </p>
+   <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="projects.html">Projects</a></li>
+  </ul>
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
    <main>
-   <p> I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects &#9733;</p>
+   <p style="color:#ff1493;font-size: 24px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+   I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects &#9733;
+   </p>
    </main>
    
    <footer>
    <p><a href="mailto:mackenzie.horton@stu.cvccworks.edu">
 	Macks Email</a></p>
    </footer>
-   
-   
+
 		
    </body>
    
