--- a/projects.html
+++ b/projects.html
@@ -6,33 +6,29 @@ File: template.html
 Date: September 2, 2025
  -->
 
-<html lang="en">
+
+  <html lang="en">
    <head>
 		<title>Mackenzie Horton</title>
 		<meta charset="utf-8">
-		<style>
-    body {
-        background: linear-gradient(to right, #fbc2eb, #a6c1ee);
-    }
-</style>
+				<link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
 		<p></p>
 	<header>
-	<h1 style="color:white;">
+	<h1 style="color:white;">  
 	Mackenzie Horton</h1>
 	<h2 style="color:#C71585;">
 	Here are some of my projects. </h2>
     </header>
    
    <nav>
-   <p>
-	<a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
-	<a href="about.html">About Me</a> &nbsp;  &#9475; &nbsp;
-	<a href="contact.html">Contact</a> &nbsp; &#9475; &nbsp;
-	<a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
-	
-   </p>
+   <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="projects.html">Projects</a></li>
+  </ul>
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
    <main>
