--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,7 @@ Date: September 2, 2025
    <head>
 		<title>Mackenzie Horton</title>
 		<meta charset="utf-8">
-		<style>
-    body {
-        background: linear-gradient(to right, #fbc2eb, #a6c1ee);
-    }
-</style>
+				<link rel="stylesheet" href="css/styles.css">
    </head>
    <body>
 		<p></p>
@@ -26,17 +22,17 @@ Date: September 2, 2025
 	I’m a beginner Java programmer who enjoys building creative and functional programs. I bring ideas to life by writing code and experimenting with new projects.
 	</h2>
 	<a href="index.html"><img src="images/Mackenzie.jpg"
-	alt="Personal Picture" height="300"
-		width="300"></a>
+	alt="Personal Picture"></a>
     </header>
    
    <nav>
    <p>
-	<a href="index.html">Home</a> &nbsp; &#9475; &nbsp;
-	<a href="about.html">About Me</a> &nbsp;  &#9475; &nbsp;
-	<a href="contact.html">Contact</a> &nbsp; &#9475; &nbsp;
-	<a href="projects.html">Projects</a> &nbsp; &#9475; &nbsp;
-   </p>
+	<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About Me</a></li>
+    <li><a href="contact.html">Contact</a></li>
+    <li><a href="projects.html">Projects</a></li>
+  </ul>
    </nav>
    <!-- Use the main area to add the main content of the webpage-->
    <main>
