--- a/projects.html
+++ b/projects.html
@@ -38,6 +38,10 @@ Date: September 2, 2025
    <div>
    <a href="projects/fitness3/index.html">Forward Chapter 3</a>
    </div>
+   
+   <div>
+   <a href="projects/fitness4/index.html">Forward Chapter 4</a>
+   </div>
    </main>
    
    <footer>
